welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:3: error: type mismatch;
 found   : Unit
 required: java.awt.Color
  Flower(choixCouleur(n));
                     ^FlowerPot:5: error: type mismatch;
 found   : Unit
 required: java.awt.Color
  Flower(choixCouleur(n));
                     ^FlowerPot:7: error: type mismatch;
 found   : Unit
 required: java.awt.Color
  Flower(choixCouleur(n));
                     ^FlowerPot:9: error: type mismatch;
 found   : Unit
 required: java.awt.Color
  Flower(choixCouleur(n));
                     ^FlowerPot:11: error: type mismatch;
 found   : Unit
 required: java.awt.Color
  Flower(choixCouleur(n));
                     ^FlowerPot:24: error: value Red is not a member of object java.awt.Color
  case 1 => return Color.Red
                         ^FlowerPot:24: warning: enclosing method choixCouleur has result type Unit: return value discarded
  case 1 => return Color.Red
            ^FlowerPot:25: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  case 2 => return Color.cyan
                         ^FlowerPot:25: warning: enclosing method choixCouleur has result type Unit: return value discarded
  case 2 => return Color.cyan
            ^FlowerPot:26: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  case 3 => return Color.orange
                         ^FlowerPot:26: warning: enclosing method choixCouleur has result type Unit: return value discarded
  case 3 => return Color.orange
            ^FlowerPot:27: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  case 4 => return Color.pink
                         ^FlowerPot:27: warning: enclosing method choixCouleur has result type Unit: return value discarded
  case 4 => return Color.pink
            ^FlowerPot:28: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  case 5 => return Color.green
                         ^FlowerPot:28: warning: enclosing method choixCouleur has result type Unit: return value discarded
  case 5 => return Color.green
            ^